--- a/kcrud-base/src/main/resources/templates/scheduler-dashboard.html
+++ b/kcrud-base/src/main/resources/templates/scheduler-dashboard.html
@@ -27,11 +27,13 @@
         }
 
         .buttons-container {
-            position: absolute;
-            top: 0;
-            right: 0;
-            margin-top: 20px;
-            margin-right: 20px;
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .left-buttons {
             display: flex;
             gap: 10px;
         }
@@ -60,6 +62,7 @@
             margin-top: 6px;
             padding: 10px;
             border-radius: 6px;
+            border: 1px solid transparent;
         }
 
         .table-container:hover {
@@ -101,38 +104,71 @@
         }
 
         .refresh {
+            background-color: #357a38;
             color: #ffffff;
-            background-color: #33632f;
         }
 
         .refresh:hover {
-            background-color: #2a5028;
+            background-color: #2a5d2c;
         }
 
-        .delete-records {
+        .pause {
+            background-color: #c87f2d;
+            color: #ffffff;
+        }
+
+        .pause:hover {
+            background-color: #a56923;
+        }
+
+        .resume {
+            background-color: #357a87;
+            color: #ffffff;
+        }
+
+        .resume:hover {
+            background-color: #2a5d67;
+        }
+
+        .delete {
             color: #ffffff;
             background-color: #9b4656;
         }
 
-        .delete-records:hover {
+        .delete:hover {
             background-color: #732b38;
         }
 
-        .table-row button {
-            background-color: #9b4656;
+        .icon-button {
+            background: none;
+            border: none;
             color: #ffffff;
+            cursor: pointer;
+            font-size: 1.2em;
+            padding: 8px;
+            transition: color 0.3s;
         }
 
-        .table-row button:hover {
-            background-color: #732b38;
+        .icon-button:hover {
+            color: #649ee0;
+        }
+
+        .delete-button span {
+            color: #e64e6f;
         }
     </style>
 </head>
 <body>
-<h1>Scheduled Jobs</h1>
+<div>
+    <h1>Scheduled Jobs</h1>
+</div>
 <div class="buttons-container">
-    <button class="refresh" onclick="refreshPage()">Refresh</button>
-    <button class="delete-records" onclick="deleteAll()">Delete All</button>
+    <div class="left-buttons">
+        <button class="refresh" onclick="refreshPage()">Refresh</button>
+        <button class="pause" onclick="pause()">Pause All</button>
+        <button class="resume" onclick="resume()">Resume All</button>
+    </div>
+    <button class="delete" onclick="deleteAll()">Delete All</button>
 </div>
 <div class="table-header">
     <span>Name</span>
@@ -154,7 +190,19 @@
             <span th:text="${item.state}">State</span>
             <span th:text="${item.isDurable ? 'Yes' : 'No'}">Durable</span>
             <span th:text="${item.shouldRecover ? 'Yes' : 'No'}">Should Recover</span>
-            <button th:attr="onclick='deleteRecord(\'' + ${item.name} + '\', \'' + ${item.group} + '\')'">Delete</button>
+            <div>
+                <button class="icon-button"
+                        th:attr="onclick='togglePauseResume(\'' + ${item.name} + '\', \'' + ${item.group} + '\', \'' + (${item.state} == 'PAUSED' ? 'resume' : 'pause') + '\')'"
+                        th:title="${item.state} == 'PAUSED' ? 'Resume' : 'Pause'">
+                    <span th:if="${item.state} == 'PAUSED'">&#x23F5;</span>
+                    <span th:if="${item.state} != 'PAUSED'">&#x23F8;</span>
+                </button>
+                <button class="icon-button delete-button"
+                        th:attr="onclick='deleteRecord(\'' + ${item.name} + '\', \'' + ${item.group} + '\')'"
+                        title="Delete">
+                    <span>&#x1F5D9;</span>
+                </button>
+            </div>
         </div>
         <div class="table-sub-row">
             <span th:text="${item.dataMap}">Data Map Content</span>
@@ -166,6 +214,34 @@
         location.reload();
     }
 
+    function pause() {
+        fetch(`/scheduler/jobs/pause`, {method: 'POST'})
+            .then(response => {
+                if (response.ok) {
+                    console.log('Scheduler paused successfully');
+                    window.location.reload();
+                } else {
+                    console.error('Failed to pause scheduler');
+                    alert("Failed to pause scheduler.");
+                }
+            })
+            .catch(error => console.error('Error:', error));
+    }
+
+    function resume() {
+        fetch(`/scheduler/jobs/resume`, {method: 'POST'})
+            .then(response => {
+                if (response.ok) {
+                    console.log('Scheduler resumed successfully');
+                    window.location.reload();
+                } else {
+                    console.error('Failed to resume scheduler');
+                    alert("Failed to resume scheduler.");
+                }
+            })
+            .catch(error => console.error('Error:', error));
+    }
+
     function deleteAll() {
         fetch(`/scheduler/jobs`, {method: 'DELETE'})
             .then(response => {
@@ -175,6 +251,21 @@
                 } else {
                     console.error('Failed to delete all records');
                     alert("Failed to delete all records.");
+                }
+            })
+            .catch(error => console.error('Error:', error));
+    }
+
+    // noinspection JSUnusedGlobalSymbols
+    function togglePauseResume(action, itemName, itemGroup) {
+        fetch(`/scheduler/jobs/${action}/${encodeURIComponent(itemName)}/${encodeURIComponent(itemGroup)}`, {method: 'POST'})
+            .then(response => {
+                if (response.ok) {
+                    console.log('Job paused successfully');
+                    window.location.reload();
+                } else {
+                    console.error('Failed to pause job');
+                    alert("Failed to pause job.");
                 }
             })
             .catch(error => console.error('Error:', error));
