Improved dashboard display for scheduler task concrete details

--- a/kcrud-base/src/main/resources/templates/scheduler-dashboard.html
+++ b/kcrud-base/src/main/resources/templates/scheduler-dashboard.html
@@ -164,7 +164,7 @@
 <div class="table-header">
     <span>Name</span>
     <span>Group</span>
-    <span>Class Name</span>
+    <span>Consumer</span>
     <span>Next Fire Time</span>
     <span>State</span>
     <span>Interval</span>
@@ -176,7 +176,7 @@
         <div class="table-row">
             <span th:text="${item.name}">Task Name</span>
             <span th:text="${item.group}">Task Group</span>
-            <span th:text="${item.className}">Class Name</span>
+            <span th:text="${item.className}">Consumer</span>
             <span th:text="${item.nextFireTime}">Next Fire Time</span>
             <span th:text="${item.state}">State</span>
             <span th:text="${item.interval}">Interval</span>
