--- a/kcrud-base/src/main/resources/templates/scheduler/dashboard.html
+++ b/kcrud-base/src/main/resources/templates/scheduler/dashboard.html
@@ -12,6 +12,11 @@
     <title>Task Scheduler</title>
 </head>
 <body>
+<div class="header">
+    <label for="groupSelect"></label><select id="groupSelect" onchange="handleGroupChange()">
+    <option value="all">All Groups</option>
+</select>
+</div>
 <div class="buttons-container">
     <div class="left-buttons">
         <button class="refresh" onclick="refreshPage()">Refresh Tasks</button>
@@ -21,6 +26,7 @@
     <button class="delete" onclick="deleteAll()">Delete All</button>
 </div>
 <div class="table-header">
+    <span></span>
     <span>Name</span>
     <span>Group</span>
     <span>Consumer</span>
@@ -34,12 +40,20 @@
 <div class="table-content">
     <div th:each="item : ${data}" class="table-container expandable" th:attr="data-id=${item.name}">
         <div class="table-row">
+            <span class="expand-trigger">+</span>
             <span th:text="${item.name}">Task Name</span>
             <span th:text="${item.group}">Task Group</span>
             <span th:text="${item.consumer}">Consumer</span>
             <span th:text="${item.nextFireTime}">Next Fire Time</span>
             <span th:text="${item.state}">State</span>
-            <span th:text="${item.outcome}" th:attr="data-log=${item.log}" onclick="openLog(this)">Outcome</span>
+            <span th:attr="data-log=${item.log}"
+                  th:style="${item.outcome == 'ERROR' ? 'color: #EA3939FF;' : ''}">
+                <span th:text="${item.outcome}"></span>
+                <span th:if="${item.outcome == 'ERROR'}"
+                      onclick="openLog(this)"
+                      style="cursor: pointer;"
+                      th:attr="data-log=${item.log}">👁️</span>
+            </span>
             <span th:text="${item.schedule}" th:title="${item.scheduleInfo}">>Schedule</span>
             <span th:text="${item.runs}">runs</span>
             <div>
@@ -53,7 +67,7 @@
                         th:attr="data-name=${item.name}, data-group=${item.group}"
                         onclick="openTaskAudit(this)"
                         title="Audit">
-                    <span>&#128196;</span>
+                    <span>&#x1F5D2;&#xFE0F;</span>
                 </button>
                 <div th:if="${item.state} != 'COMPLETE' and ${item.state} != 'NONE'">
                     <button class="icon-button"
