Updated style for the logged in role in the RBAC dashboard

--- a/kcrud-access/src/main/resources/rbac/dashboard.css
+++ b/kcrud-access/src/main/resources/rbac/dashboard.css
@@ -10,9 +10,13 @@ body {
     padding: 20px;
 }
 
-h1, h3 {
+.header {
     text-align: center;
     margin-bottom: 30px;
+}
+
+.header .role {
+    color: #029eef;
 }
 
 form {
