--- a/kcrud-core/src/main/resources/templates/scheduler/dashboard.html
+++ b/kcrud-core/src/main/resources/templates/scheduler/dashboard.html
@@ -18,13 +18,13 @@
 <body>
 <div class="header">
     <label for="groupSelect"></label><select id="groupSelect" onchange="handleGroupChange()">
-    <option value="all">All Groups</option>
+    <option value="">All Groups</option>
 </select>
 </div>
 
 <div class="buttons-container">
     <div class="left-buttons">
-        <button class="refresh" onclick="refreshPage()">Refresh Tasks</button>
+        <button class="refresh" onclick="refreshPage()">Refresh</button>
         <button class="pause-resume" id="toggleScheduler" onclick="toggleScheduler()">Pause Scheduler</button>
         <button class="audit" id="openFullAudit" onclick="openFullAudit()">Audit</button>
         <button class="clear-events" onclick="clearEvents()">Clear Events</button>
